cabal-version:       >= 1.10

name:                GetLineRewrite
version:             0.1.0.0
license-file:        LICENCE
author:              Colm Baston
maintainer:          colm@colmbaston.uk
build-type:          Simple
extra-source-files:  README.md


library
  exposed-modules:     GetLineRewrite
  default-language:    Haskell2010
  build-depends:       base       >= 4.14,
                       containers >= 0.6,
                       mtl        >= 2.2
